--- a/.github/workflows/continuous-update.yml
+++ b/.github/workflows/continuous-update.yml
@@ -9,14 +9,14 @@ on:
             - "composer.lock"
 
 jobs:
-    deploy:
+    update:
         runs-on: ubuntu-latest
 
         steps:
             - uses: actions/checkout@v2
 
             - name: Setup PHP
-              uses: actions/setup-php@v1
+              uses: shivammathur/setup-php@v2
               with:
                   php-version: "7.4"
                   extensions: mbstring
