Change email of Partido COPEI

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "Partido COPEI",
-            "email": "prensa@copei.org.ve"
+            "email": "info@copei.org.ve"
         }
     ],
     "require": {
