--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "community-managers"
     ],
     "type": "project",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "Partido COPEI",
