Change description of project

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "partido-copei/reportes-community-managers-bot",
-    "description": "Bot de Reportes diarios de los Community Manager's del Partido COPEI",
+    "description": "Bot de Reportes semanales de los Community Manager's del Partido COPEI",
     "keywords": [
         "partido-copei",
         "copei",
